2007-09-13  Andrew Haley  <aph@redhat.com>

	* Makefile.am (icedtea-debug): Correct dependencies.

2007-09-13  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Fixed target typo.
	* Makefile.in: Regenerated.

2007-09-12  Christan Thalinger  <twisti@complang.tuwien.ac.at>

	* Makefile.am (icedtea-debug): Added -debug to target directory,
	as found today by Andrew Haley.
	* Makefile.in: Likewise.

2007-09-12  Christan Thalinger  <twisti@complang.tuwien.ac.at>

	* .hgignore: Added *~.

2007-09-12  Lillian Angel  <langel@redhat.com>

	* AUTHORS: Added Christian Thalinger.

2007-09-12  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Added BUILD_NUMBER to environment. This should be
	updated with each bXX release. Also, added dependency for
	icedtea-debug target.
	* Makefile.in: Regenerated.

2007-09-12  Joshua Sumali  <jsumali@redhat.com>

	* Makefile.am: Fixed error that broke the build.
	* Makefile.in: Regenerated

2007-09-11  Joshua Sumali  <jsumali@redhat.com>

	* patches/icedtea-demos.patch: New File. Patches the sample
	jvmti makefiles.
	* configure.ac: Added a check for chmod.
	* configure: Regenerated.
	* Makefile.am: Added line to add write
	permissions to the sample makefiles to be patched.
	* Makefile.in: Regenerated.

2007-09-09  Mark Wielaard  <mark@klomp.org>

	* README: Add references to home page, bugzilla, faq, mailing list
	and mercurial repo.

2007-09-07  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* Makefile.am (EXTRA_DIST): Add tools-copy-files.txt.
	(ICEDTEA_ENV): Remove ecj-specific variables.
	(env): Suggest unsetting JAVA_HOME.
	(env-ecj): Likewise.
	(stamps/bootstrap-directory-symlink.stamp): Depend on
	conditionally-defined BOOTSTRAP_DIRECTORY_STAMP.
	(MEMORY_LIMIT): Set limit when building with IcedTea's javac.
	($(SECURITY_JAR_FILES)): Add a dummy file to each jar to satisfy
	IcedTea's jar implementation.
	(stamps/tools-class-files.stamp): Replace JCOMPILER reference with
	JAVAC.
	(stamps/rt-class-files.stamp): Likewise.